Fix dog issue on iOS once again

--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,6 @@ img {
     word-wrap: break-word;
   }
   .header img {
-    width: 50%;
+    width: auto;
   }
 }
